# fast_bench

./: .gitignore  CLAUDE.md  LICENSE  fast_bench_plan.md  fast_bench_status.md  fast_bench_testing.md  pyproject.toml  requirements.txt
config/: config.sample.yaml
docs/: network_capacity_metrics.md
src/fast_bench/: __init__.py  baseline_probe.py  config_schema.py  metrics_agent.py  ui_attach.py
src/fast_bench/utils/: __init__.py  charts.py  files.py  timeutil.py
tests/: __init__.py  test_baseline_probe.py  test_config.py  test_metrics_schema.py  test_relcoords.py
tests/integration/: __init__.py  test_baseline_real.py
tests/manual/: __init__.py  test_metrics_with_petrel.py  test_petrel_attach.py
